# sharepoint-rs

./: Cargo.toml  README.md  build.cmd
src/: auth.rs  data.rs  lib.rs  list.rs
